--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "slug": "^8.2.2",
     "uniqid": "^5.4.0"
   },
