--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-#  MONGODB_URL="mongodb+srv://movies:dt01626746032@cluster0.2ktatdl.mongodb.net/?retryWrites=true&w=majority"
+#  MONGODB_URL="mongodb://127.0.0.1:27017/movies"
  MONGODB_URL="mongodb+srv://projectfilm:dt01626746032@cluster0.2ktatdl.mongodb.net/?retryWrites=true&w=majority"
  ACCESS_TOKEN_SECRET = "namhoai"
  REFRESH_TOKEN_SECRET = "hoainam"
