--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "scripts": {
-    "start": "node index.js"
+    "dev": "nodemon --exec babel-node index.js"
   },
   "dependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/node": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
     "argon2": "^0.30.3",
     "casual": "^1.6.2",
+    "cloudinary": "^1.40.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -17,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "slug": "^8.2.2",
+    "socket.io": "^4.7.2",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
